# plug-and-crawl

./: README.md  amazon.py  pyproject.toml  requirements.txt
docs/: amazon_example.json  amazon_example_class.py  run_example.py
scenarios/: amazon_example_class.py  run_example.py
src/: webdriver.py
src/plugandcrawl/: BasePipeline.py  BasePipelinesManager.py  CustomPage.py  __init__.py
src/v0/: __init__.py  amazon.py  webdriver.py
src/v1/: amazon.py  base_pipelines.py
src/v2/: BasePipeline.py  BasePipelinesManager.py  CustomPage.py  run.py
src/v2/scenarios/: amazon_example_class.py  scenario_structure.yaml
